--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 body {
     height: 100vh;
     background-color: #000;
-    background-image: url('/public/background_image.jpg');
+    background-image: url('/background_image.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
